fix signin/up page alignment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,14 +39,16 @@ ul {
     color: black;
   }
 }
-#signInHeader {
+#signInHeader, #signUpHeader {
   display: flex;
   padding-top: 50%;
   padding-left: 25%
 }
 .signForm {
-  padding-left: 10%;
+  padding-left: 25%;
   margin-right: 10%;
+  display: flex;
+  flex-direction: column;
 }
 #reviewText {
   word-wrap: break-word;
